--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/scout": "^10.2",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-searchable": "^1.11",
         "vanthao03596/laravel-hanhchinhvn": "^1.0"
     },
